--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Pull in dev.to posts
-        uses: khaledhosseini/blog-post-workflow@v1
+        uses: khaledhosseini/.github/workflows/blog-post-workflow@v1
         with:
           feed_list: "https://dev.to/feed/khaledhosseini"
           max_post_count: 5
